fixes element spacing inside hero component for instances when button is hidden. adds font weights to google font script

--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -16,7 +16,6 @@
     @media(min-width: 768px) {
         background-position: top center;
         height: 474px;
-        justify-content: flex-end;
     }
 
     @media(min-width: 1200px) {
