--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -64,7 +64,7 @@
 }
 
 .font-light {
-    font-weight: 200;
+    font-weight: 300;
 }
 
 .font-medium {
@@ -72,9 +72,9 @@
 }
 
 .font-heavy {
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .font-heaviest {
-    font-weight: 600;
+    font-weight: 900;
 }
